Updated code for responsivness

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     </div>
     <div class="container why-us">
- <h2 class="text-center my-5 text-light">Why choose Us</h2>
+      <h2 class="text-center my-5 text-light">Why choose Us</h2>
             <div class="box-container text-light">
                 <div class="div boxes">
                     <span>1--- </span>
@@ -177,14 +177,14 @@
                 </div>
             </div>
     </div>
-    <div class="contaainer circles">
+    <div class="container circles">
         <div class="box-container circle">
             <div id="circles-1" class="circle-box">
                
             </div>
             <div id="circles-2" class="circle-box">
-                <strong style="font-size: 105px;">10</strong>
-                <p style="font-size:25px">Years of Experience</p>
+                <strong class="font-10">10</strong>
+                <p class="years-font">Years of Experience</p>
             </div>
             <div id="circles-3" class="circle-box"></div>
             <div id="circles-4" class="circle-box"></div>
